# resource_retriever_service

./: .gitignore  README.md
resource_retriever_interfaces/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  package.xml
resource_retriever_service/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  package.xml
resource_retriever_service/include/resource_retriever_service/: resource_retriever_service.hpp
resource_retriever_service/src/: resource_retriever_service.cpp
resource_retriever_service/test/: resource_retriever_service_test.cpp
resource_retriever_service_plugin/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  package.xml
resource_retriever_service_plugin/include/resource_retriever_service_plugin/: resource_retriever_service_plugin.hpp
resource_retriever_service_plugin/src/: resource_retriever_service_plugin.cpp
resource_retriever_service_plugin/test/: resource_retriever_service_plugin_test.cpp
